prod/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
spec:
  rules:
  - http:
      paths:
      ################
      # URL ROUTING #
      ################
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: django-cluster-ip-service
            port:
              number: 8000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: django-cluster-ip-service
            port:
              number: 8000
      ##########################
      # STATIC FOLDER ROUTING #
      ##########################
      - path: /static/admin/
        pathType: Prefix
        backend:
          service:
            name: static-assets-cluster-ip-service
            port:
              number: 8000
      - path: /static/rest_framework/
        pathType: Prefix
        backend:
          service:
            name: static-assets-cluster-ip-service
            port:
              number: 8000
      - path: /static/
        pathType: Prefix
        backend:
          service:
            name: react-cluster-ip-service
            port:
              number: 3000
      - path: /media/
        pathType: Prefix
        backend:
          service:
            name: react-cluster-ip-service
            port:
              number: 3000
      ################
      # URL ROUTING #
      ################
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-cluster-ip-service
            port:
              number: 3000
